force-app/main/default/objects/List__c/List__c.object-meta.xml
<CustomObject>
    <label>Liste</label>
    <nameField>
        <label>List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lister</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>