force-app/main/default/objects/List__c/fields/List_description__c.field-meta.xml
<CustomField>
    <fullName>List_description__c</fullName>
    <label>List description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>