force-app/main/default/objects/List__c/fields/List_Name__c.field-meta.xml
<CustomField>
    <fullName>List_Name__c</fullName>
    <label>List Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>