force-app/main/default/objects/List__c/fields/Listnumk__c.field-meta.xml
<CustomField>
    <fullName>Listnumk__c</fullName>
    <externalId>true</externalId>
    <label>Listenummerid</label>
    <length>20</length>
    <type>Text</type>
</CustomField>